--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -128,6 +128,9 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\VertexZoom.cs" />
     <Compile Include="Assets\DownloadedAssets\JMO Assets\WarFX\Demo\Assets\WFX_Demo_New.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
+    <Compile Include="Assets\Scripts\ipickup.cs" />
+    <Compile Include="Assets\Scripts\pickup.cs" />
+    <Compile Include="Assets\Scripts\grabbing.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Prefabs\Sounds\Sound Effects\Notes.txt" />
